# Bill-Insight-V2

./: .gitignore  README.md  build_apk.sh  package-lock.json  package.json
.github/workflows/: build_apk.yml
public/i18n/: en.json  vi.json
src/: index.html  safe-area.scss  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: bhx_commands.rs  google_sheet_commands.rs  mod.rs
src-tauri/src/helpers/: mod.rs  number_helper.rs
src-tauri/src/models/: bach_hoa_xanh.rs  invoice_item.rs  mod.rs  response_command.rs  sheet_stats.rs
src-tauri/src/services/: bach_hoa_xanh_service.rs  google_sheet_service.rs  mod.rs
src-tauri/src/states/: app_state.rs
src/app/: app.config.ts  app.routes.ts  app.ts
src/app/core/enums/: folder-names.ts  route-names.ts  setting-keys.ts
src/app/pages/add-invoice/: add-invoice.html  add-invoice.ts
src/app/pages/add-invoice/models/: captcha-session.ts  invoice-excel.ts  xml_data.ts
src/app/pages/config/: config.html  config.ts
src/app/pages/config-details/: config-details.html  config-details.ts
src/app/pages/config-details/models/: sheet-info.ts
src/app/pages/config-details/services/: config-details.ts
src/app/pages/config/models/: config.ts
src/app/pages/config/services/: config-service.ts
src/app/pages/home/: home.html  home.ts
src/app/pages/home/models/: sheet-stats.ts
src/app/pages/list-invoices/: list-invoices.html  list-invoices.ts
src/app/pages/list-invoices/models/: invoice-item.ts  product.ts
src/app/pages/settings/: settings.ts
src/app/shared/components/layout/main-layout/: main-layout.html  main-layout.scss  main-layout.ts
src/app/shared/const/: config.ts
src/app/shared/enums/: file-names.ts
src/app/shared/helpers/: app-folder.ts  file-helper.ts  route-navigation-helper.ts
src/app/shared/models/: response-command.ts  setting-model.ts
src/app/shared/models/dialog-states/: notice-dialog-state.ts
src/app/shared/services/: config-service.ts
src/app/shared/services/tauri/: tauri-command-service.ts
src/app/shared/stores/: config-store.ts
test/: sheets4.rs
(+1 files in other folders)
